registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-registry-service
  namespace: container-registry
spec:
  type: ClusterIP
  selector:
    app: container-registry
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
